# Pytest-framework

./: .pylintrc  README.md  pyproject.toml  pytest.ini
src/: MemoryDatabase.py  UserManager.py  main.py  mockWeather.py
src/api/: MockApi.py
src/db/: MockDb.py  sqlite.py
tests/: conftest.py
tests/unit/: test_MemoryDatabase.py  test_UserManager.py  test_db_sqlite_mock.py  test_fixtures.py  test_main.py  test_main_parameterised.py  test_markers.py  test_mockWeather.py  test_monkeypatch.py
utils/: test_decorators.py
